--- a/src/partials/problems.html
+++ b/src/partials/problems.html
@@ -1,37 +1,37 @@
-<section class="problems-section">
-<div class="problems-img-cont">
+<section class="problems__section">
+<div class="problems__img-cont">
     <picture>
         <source srcset="/images/fire/fire-min.webp 1x, /images/fire/fire@2x-min.webp 2x" type="image/webp">
-        <img class="problems-img" src="/images/fire/fire-min.png" alt="fire" srcset="/images/fire/fire@2x-min.png 2x">
+        <img class="problems__img" src="/images/fire/fire-min.png" alt="fire" srcset="/images/fire/fire@2x-min.png 2x">
     </picture>
 </div>
 <div class="container problems">
    
-    <h1 class="problems-title">Главные проблемы учеников 
+    <h1 class="problems__title">Главные проблемы учеников 
         на English ВНО, которые мы 
-         <span class="problems-word">помогаем</span>  решить</h1>
+         <span class="problems__accent-word">помогаем</span>  решить</h1>
    
-    <ul class="problems-list list">
-        <li class="problems-item">
-            <p class="problems-description">Название грамматики</p>
+    <ul class="problems__list list">
+        <li class="problems__item">
+            <p class="problems__description">Название грамматики</p>
         </li>
-        <li class="problems-item">
-            <p class="problems-description">Неумение воcпринимать
+        <li class="problems__item">
+            <p class="problems__description">Неумение воcпринимать
             устную английскую речь</p>
         </li>
-        <li class="problems-item">
-            <p class="problems-description">Скупой словарный запас
+        <li class="problems__item">
+            <p class="problems__description">Скупой словарный запас
             для написания сочинения</p>
         </li>
-        <li class="problems-item">
-            <p class="problems-description">Подготовка в
+        <li class="problems__item">
+            <p class="problems__description">Подготовка в
                  одиночку</p>
         </li>
-        <li class="problems-item">
-            <p class="problems-description">Отсутствие единого ресурса знаний</p>
+        <li class="problems__item">
+            <p class="problems__description">Отсутствие единого ресурса знаний</p>
         </li>
-        <li class="problems-item">
-            <p class="problems-description">Недостаток самоорганизации и лень</p>
+        <li class="problems__item">
+            <p class="problems__description">Недостаток самоорганизации и лень</p>
         </li>
     </ul>
 
