--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,26 +1,28 @@
 <footer>
-    <p class="footer-suptitle">homemade ice cream made</p>
-    <h5 class="footer-title">with passion</h5>
-
-    <ul>
-        <li><a class="footer-social-link" href="#">
-            <svg class="footer-social-icon" width="20px" height="20px">
-                <use href=""></use>
-            </svg>
-        </a>GitHub</li>
-        <li><a class="footer-social-link" href="#">
-            <svg class="footer-social-icon" width="20px" height="20px">
-                <use href=""></use>
-            </svg>
-        </a>Telegramm</li>
-        <li><a class="footer-social-link" href="#">
-            <svg class="footer-social-icon" width="20px" height="20px">
-                <use href=""></use>
-            </svg>
-        </a>facebook</li>
-    </ul>
-
-    <p class="footer-text-link">Feel free to contact<a class="footer-color-link" href="#"> +61 (0) 383 766 284</a></p>
-
-    <span class="footer-text">© 2019 - IceCream. All Rights Reserved.</span>
+    <div class="container">
+        <p class="footer-suptitle">homemade ice cream made</p>
+        <h5 class="footer-title">with passion</h5>
+        
+        <ul>
+            <li><a class="footer-social-link" href="#">
+                    <svg class="footer-social-icon" width="20px" height="20px">
+                        <use href="./images/svg/sprite.svg#icon-github"></use>
+                    </svg>
+                </a></li>
+            <li><a class="footer-social-link" href="#">
+                    <svg class="footer-social-icon" width="20px" height="20px">
+                        <use href="./images/svg/sprite.svg#icon-telegram"></use>
+                    </svg>
+                </a></li>
+            <li><a class="footer-social-link" href="#">
+                    <svg class="footer-social-icon" width="20px" height="20px">
+                        <use href="./images/svg/sprite.svg#icon-facebook"></use>
+                    </svg>
+                </a></li>
+        </ul>
+        
+        <p class="footer-text-link">Feel free to contact<a class="footer-color-link" href="#"> +61 (0) 383 766 284</a></p>
+        
+        <span class="footer-text">© 2019 - IceCream. All Rights Reserved.</span>
+    </div>
 </footer>
