--- a/src/sass/components/_sale.scss
+++ b/src/sass/components/_sale.scss
@@ -22,9 +22,23 @@
       $card-bcg 12%,
       $card-bcg
     );
+    position: relative;
   }
 }
 
+.bcg-img-sale {
+  @media screen and (max-width: 1199px) {
+    display: none;
+  }
+
+  @media screen and (min-width: 1200px) {
+    position: absolute;
+    top: 100px;
+    left: 0;
+    right: 0;
+    max-width: 1600px;
+  }
+}
 .contacts-card-list {
   padding: 0;
   margin: 0;
