--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -649,6 +649,23 @@ img {
   .contacts-card {
     background-image: -webkit-gradient(linear, left top, left bottom, color-stop(12%, #ffffff), color-stop(12%, #fff5f675), to(#fff5f675));
     background-image: linear-gradient(to bottom, #ffffff 12%, #fff5f675 12%, #fff5f675);
+    position: relative;
+  }
+}
+
+@media screen and (max-width: 1199px) {
+  .bcg-img-sale {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .bcg-img-sale {
+    position: absolute;
+    top: 100px;
+    left: 0;
+    right: 0;
+    max-width: 1600px;
   }
 }
 
