--- a/src/sass/layout/_review.scss
+++ b/src/sass/layout/_review.scss
@@ -12,13 +12,22 @@
 
 .review-text {
   padding: 43px 66px 26px 57px;
-  text-align: center;
   font-weight: 500;
   font-size: 12px;
   line-height: 2.58;
   text-align: center;
   color: #000000;
-  text-decoration: underline;
+}
+
+.review-text-line::after {
+  content: '';
+  display: block;
+  width: 180px;
+  border-bottom: 1px solid #000;
+}
+
+.review-text-line {
+  display: block;
 }
 
 .review-name {
