--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -40,15 +40,13 @@
 }
 
 .mobile-menu {
-  @media screen and (max-width: 1200px) {
+  @media screen and (max-width: 1199px) {
     position: fixed;
     top: 0;
     right: 0;
     width: 250px;
     height: 100vh;
     padding-top: 60px;
-    // padding-left: 20px;
-    // padding-right: 21px;
 
     text-align: center;
 
@@ -68,6 +66,10 @@
     }
 
     z-index: 5;
+
+    @media screen and (min-width: 768px) {
+      width: 254px;
+    }
   }
 }
 
@@ -89,6 +91,10 @@
   cursor: pointer;
 
   background-color: transparent;
+
+  @media screen and (min-width: 768px) {
+    right: 34px;
+  }
 }
 
 .icon-close {
@@ -110,11 +116,19 @@
   line-height: 1.3125;
   text-align: center;
   color: $titleTextColor;
+
+  @media screen and (min-width: 768px) {
+    width: 186px;
+  }
 }
 
 .mobile-btn-icon {
   fill: $titleTextColor;
   margin-left: 16px;
+
+  @media screen and (min-width: 768px) {
+    margin-left: 14px;
+  }
 }
 
 .mobile-item {
