Добавляет миксин для медиа и делает контейнер
для своей сецкии я пробую только,проверь может что не так для контейнера и в миксине я исправлю

--- a/src/sass/base/_container.scss
+++ b/src/sass/base/_container.scss
@@ -1,8 +1,18 @@
 .container {
-  width: 320px;
+  width: 100%;
 
   margin-left: auto;
   margin-right: auto;
   padding-right: 20px;
   padding-left: 20px;
+
+  @include for-size(mobile-only) {
+    max-width: 772px;
+  }
+  @include for-size(tablet) {
+    width: 772px;
+  }
+  @include for-size(desktop) {
+    width: 1280px;
+  }
 }
