--- a/src/sass/layouts/_location.scss
+++ b/src/sass/layouts/_location.scss
@@ -6,6 +6,12 @@
   margin-top: -20px;
   margin-bottom: 54px;
 
+  @include for-size(tablet) {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -20px;
+  }
+
   & .card {
     max-width: 220px;
     margin-left: auto;
@@ -22,6 +28,11 @@
     background: $primaryWhiteColor;
     box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
     border-radius: 24px;
+
+    @include for-size(tablet) {
+      margin-left: 20px;
+      width: calc((100% / 3) - 20px);
+    }
 
     & .description {
       color: $secondaryTextColor;
