--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -15,3 +15,30 @@ $secondaryTextColor: #907e82;
 // Фон мобильного меню
 $mobileMenuColor: #e17992;
 
+@mixin for-size($range) {
+  $mobile: 320px;
+  $tablet: 772px;
+  $desktop: 1280px;
+
+  @if $range == mobile-only {
+    @media screen and (max-width: #{$tablet - 1}) {
+      @content;
+    }
+  } @else if $range == mobile {
+    @media screen and (min-width: $mobile) {
+      @content;
+    }
+  } @else if $range == tablet-only {
+    @media screen  and (min-width: $tablet) and (max-width: #{$desktop - 1}) {
+      @content;
+    }
+  } @else if $range == tablet {
+    @media screen and (min-width: $tablet) {
+      @content;
+    }
+  } @else if $range == desktop {
+    @media screen and (min-width: $desktop) {
+      @content;
+    }
+  }
+}
