--- a/src/partials/teacher.html
+++ b/src/partials/teacher.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="teacher__position">
       <div class="teacher_left">
-        <h2 class="teacher__title">ПРЕПОДАВАТЕЛЬ</h2>
+        <h2 class="teacher__title">Преподаватель</h2>
         <picture>
           <source
             srcset="
@@ -25,7 +25,7 @@
         </picture>
       </div>
       <div class="teacher__right">
-        <p class="teacher__name">ЕЛЕНА МОРЕВА</p>
+        <p class="teacher__name">Елена Морева</p>
         <ul class="teacher_list list">
           <li class="teacher__items">Опыт подготовки учеников к ВНО - 6 лет</li>
           <li class="teacher__items">
