--- a/src/sass/components/_we_do_it.scss
+++ b/src/sass/components/_we_do_it.scss
@@ -1,12 +1,10 @@
-.container {
-    margin-top: 50px;
-    margin-bottom: 50px;
-}
 .doit {
     display: flex;
+    margin-bottom: 50px;
 }
 
 .doit-title {
+    margin-top: 50px;
     margin-bottom: 30px;
     font-family: Montserrat;
     font-style: normal;
@@ -131,12 +129,14 @@
 @media screen and (min-width: 768px) {
     .container {
         max-width: 768px;
-        margin-top: 50px;
-        margin-bottom: 50px;
         padding-right: 40px;
         padding-left: 40px;
     }
+    .doit {
+        margin-bottom: 50px;
+    }
     .doit-title {
+        margin-top: 50px;
         font-size: 26px;
         line-height: 1.3;
     }
@@ -182,13 +182,15 @@
 
 
 @media screen and (min-width: 1316px) {
+    .doit {
+        margin-bottom: 130px;
+    }
     .container {
         max-width: 1316px;
-        margin-top: 130px;
-        margin-bottom: 130px;
     }
 
     .doit-title {
+        margin-top: 130px;
         font-size: 46px;
         line-height: 1.3;
         text-align: start;
