--- a/src/partials/problems.html
+++ b/src/partials/problems.html
@@ -36,26 +36,26 @@
     </ul>
 
     <div class="features">
-        <h1 class="features-title">Почему нас
+        <h1 class="features__title">Почему нас
             выбирают</h1>
-        <ul class="features-list list">
-            <li class="features-item">
-                <p class="features-description">Обучение в малых командах</p>
+        <ul class="features__list list">
+            <li class="features__item">
+                <p class="features__description">Обучение в малых командах</p>
             </li>
-            <li class="features-item">
-                <p class="features-description">Визуализированные конспекты</p>
+            <li class="features__item">
+                <p class="features__description">Визуализированные конспекты</p>
             </li>
-            <li class="features-item">
-                <p class="features-description">Каждое занятие имеет цель и конкретный результат</p>
+            <li class="features__item">
+                <p class="features__description">Каждое занятие имеет цель и конкретный результат</p>
             </li>
-            <li class="features-item">
-                <p class="features-description">Реальные результаты преподавателя</p>
+            <li class="features__item">
+                <p class="features__description">Реальные результаты преподавателя</p>
             </li>
-            <li class="features-item">
-                <p class="features-description">Прогамма курса соответствует требованиям МОН Украины</p>
+            <li class="features__item">
+                <p class="features__description">Прогамма курса соответствует требованиям МОН Украины</p>
             </li>
-            <li class="features-item">
-                <p class="features-description">Набор команд по уровням знаний</p>
+            <li class="features__item">
+                <p class="features__description">Набор команд по уровням знаний</p>
             </li>
         </ul>
     </div>
