--- a/src/sass/components/_products.scss
+++ b/src/sass/components/_products.scss
@@ -1,6 +1,6 @@
 .products-container {
   width: 100%;
-  background: getColor(white-backgraund);
+  background: getColor(white-color);
 }
 .advantages {
   display: inline-block;
@@ -100,12 +100,12 @@
   & div {
     width: 100%;
     padding-bottom: 40px;
+    padding-top: 40px;
   }
 }
 .products img {
   position: absolute;
-  top: -35%;
-  padding-top: 31px;
+  top: -25%;
   width: 100%;
   @media screen and (min-width: 768px) and (max-width: 1199px) {
     top: -25%;
