--- a/css/main.css
+++ b/css/main.css
@@ -34,6 +34,11 @@
   clip: rect(0 0 0 0);
 }
 
+*::before,
+*::after {
+  margin: 0;
+}
+
 h1,
 h2,
 h3,
@@ -73,7 +78,7 @@ li {
 }
 
 .container {
-  width: 1240px;
+  width: 1280px;
   margin: 0 auto;
   padding: 0 20px;
 }
@@ -98,13 +103,22 @@ li {
 
 .review-text {
   padding: 43px 66px 26px 57px;
-  text-align: center;
   font-weight: 500;
   font-size: 12px;
   line-height: 2.58;
   text-align: center;
   color: #000000;
-  text-decoration: underline;
+}
+
+.review-text-line::after {
+  content: '';
+  display: block;
+  width: 180px;
+  border-bottom: 1px solid #000;
+}
+
+.review-text-line {
+  display: block;
 }
 
 .review-name {
