делает паршал для миксина
размеры контейнера не утверждены,завтра с менторами будет обсуждение

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -2,7 +2,7 @@
  * Главный файл стилей.
  * Все паршалы подключаются сюда.
  */
-
+@import './utils/mixsin';
 @import './utils/variables';
 @import './utils/vissually-hidden';
 @import './base/common';
