--- a/src/sass/layouts/_footer.scss
+++ b/src/sass/layouts/_footer.scss
@@ -1,6 +1,5 @@
 .footer {
   background-color: #fff5f6;
-  padding-top: 183px;
   padding-left: 20px;
   padding-right: 20px;
 
@@ -15,9 +14,8 @@
   color: #FFA5BA;
   margin-top: 0;
   margin-bottom: 17px;
+}
 
-}
-}
 ul {
   list-style: none;
   display: inline-flex;
@@ -53,3 +51,21 @@ color: #907E82;
 .footer-text {
   display: block;
 }
+
+.socials-item {
+  position: relative;
+}
+.socials-icon {
+  position: absolute;
+  fill: #FFFFFF;
+  width: 32px;
+  height: 32px;
+  background-color: #FEA5BB;
+  border-radius: 50%;
+  display: flex;
+  justify-content: right;
+  align-items: center;
+  
+}
+
+
