--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -7,21 +7,21 @@
     <div class="footer-socials">
       <ul>
         <li class="socials-item">
-          <a href="https://github.com/" class="socials-link">github</a>
+          <a href="https://github.com/" class="socials-link"></a>
           <svg class="socials-icon" width="32" height="32">
-            <!-- <use href="./images/icons/simbol-defs.svg#icon-github.svg"></use> -->
+            <use href="./images/icons/symbol-defs.svg#icon-github.svg"></use>
           </svg>
         </li>
         <li class="socials-item">
-          <a href="https://web.telegram.org/#/login" class="socials-link">telegram</a>
+          <a href="https://web.telegram.org/#/login" class="socials-link"></a>
           <svg class="socials-icon" width="32" height="32">
-            <use></use>
+            <use href="./images/icons/symbol-defs.svg#icon-telegram.svg"></use>
           </svg>
         </li>
         <li class="socials-item">
-          <a href="https://www.facebook.com/" class="socials-link">facebook</a>
+          <a href="https://www.facebook.com/" class="socials-link"></a>
           <svg class="socials-icon" width="32" height="32">
-            <use></use>
+            <use href="./images/icons/symbol-defs.svg#icon-facebook.svg"></use>
           </svg>
         </li>
       </ul>
