Добавляет hover/focus на иконки и кнопки секции

--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -52,7 +52,7 @@
       <ul class="reviews__list list">
         <li class="reviews__item">
           <button class="reviews__button">
-            <picture>
+            <picture class="reviews__buttom-icon">
               <source
                 srcset="
                   ./images/reviews/img2_mobi_x1.jpg 1x,
@@ -77,7 +77,7 @@
         </li>
         <li class="reviews__item">
           <button class="reviews__button">
-            <picture>
+            <picture class="reviews__buttom-icon">
               <source
                 srcset="
                   ./images/reviews/img3_mobi_x1.jpg 1x,
@@ -103,7 +103,7 @@
         </li>
         <li class="reviews__item">
           <button class="reviews__button">
-            <picture>
+            <picture class="reviews__buttom-icon">
               <source
                 srcset="
                   ./images/reviews/img4_mobi_x1.jpg 1x,
@@ -129,7 +129,7 @@
         </li>
         <li class="reviews__item">
           <button class="reviews__button">
-            <picture>
+            <picture class="reviews__buttom-icon">
               <source
                 srcset="
                   ./images/reviews/img5_tablet_x1.jpg 1x,
@@ -147,7 +147,7 @@
         </li>
         <li class="reviews__item">
           <button class="reviews__button">
-            <picture>
+            <picture class="reviews__buttom-icon">
               <source
                 srcset="
                   ./images/reviews/img6_tablet_x1.jpg 1x,
@@ -165,7 +165,7 @@
         </li>
         <li class="reviews__item">
           <button class="reviews__button">
-            <picture>
+            <picture class="reviews__buttom-icon">
               <source
                 srcset="
                   ./images/reviews/img7_tablet_x1.jpg 1x,
@@ -183,7 +183,7 @@
         </li>
         <li class="reviews__item">
           <button class="reviews__button">
-            <picture>
+            <picture class="reviews__buttom-icon">
               <source
                 srcset="
                   ./images/reviews/img8_tablet_x1.jpg 1x,
