закончил первую секцию, сделал вторую секцию і моб версии.

--- a/src/partials/feedback.html
+++ b/src/partials/feedback.html
@@ -11,7 +11,7 @@
             </button>
             <div class="slide__container">
                 <div class="photo-and-icon__container">
-                    <picture>
+                    <picture class="top-image__container">
                         <source media="(min-width: 768px)"
                             srcset="./images/slider/slider-tablet6-min.jpg 1x, ./images/slider/slider-tablet6@2x-min.jpg 2x">
 
@@ -19,19 +19,19 @@
                             srcset="/images/slider/slider-mob-min.jpg 1x, /images/slider/slider-mob@2x-min.jpg 2x">
                         <img class="main-sliding__photos" src="../src/images/slider/slider-mob-min.jpg" alt="фото">
                     </picture>
-                    <svg width="30px" height="30px">
+                    <svg class="icon-vk" width="30px" height="30px">
                         <use href="/images/icons/icons-sprite.svg#icon-vk"></use>
                     </svg>
                 </div>
                 <div class="person__container">
                     <h3 class="person__title">Тоня Кучеровская</h3>
 
-                    <p>
+                    <p class="about-education__text">
                         Выпуск 2015-го года, Національний університет біоресурсів
                         і природокористування України
                     </p>
 
-                    <p>
+                    <p class="description__text">
                         За короткий час занять з Оленою я опанувала граматику і поповнила свій зовсім пустий словниковий
                         запас.
                         З першого ж
@@ -42,7 +42,7 @@
                         найменшу
                         помилку.
                         Зараз
-                        я можу похизуватись тим, що я студен ... Читать дальше
+                        я можу похизуватись тим, що я студен ... <a class="read-more__link" href="#">Читать дальше</a> 
                     </p>
                 </div>
             </div>
@@ -52,11 +52,69 @@
                 </svg>
             </button>
             <div class="small-icon__container">
-                <picture>
-                    <source media="(min-width: 320px)"
-                        srcset="/images/slider/slider-mob2-min.jpg 1x, /images/slider/slider-mob2@2x-min.jpg 2x">
-                    <img class="bottom__photos" src="/images/slider/slider-mob2-min.jpg" alt="фото">
-                </picture>
+                <button type="button" class="bottom-left__button">
+                    <svg width="40px" height="10px">
+                        <use href="/images/icons/icons-sprite.svg#icon-strelkavlevo"></use>
+                    </svg>
+                </button>
+                <ul class="first-image__set">
+                    <li class="first-image__set-item">
+                        <picture >
+                            <source media="(min-width: 320px)"
+                                srcset="/images/slider/slider-mob2-min.jpg 1x, /images/slider/slider-mob2@2x-min.jpg 2x">
+                            <img class="bottom__photos" src="/images/slider/slider-mob2-min.jpg" alt="фото">
+                        </picture>
+                    </li>
+                    <li class="first-image__set-item">
+                        <picture >
+                            <source media="(min-width: 320px)"
+                                srcset="/images/slider/slider-mob2-min.jpg 1x, /images/slider/slider-mob2@2x-min.jpg 2x">
+                            <img class="bottom__photos" src="/images/slider/slider-mob2-min.jpg" alt="фото">
+                        </picture>
+                    </li>
+                    <li class="first-image__set-item">
+                        <picture >
+                            <source media="(min-width: 320px)"
+                                srcset="/images/slider/slider-mob2-min.jpg 1x, /images/slider/slider-mob2@2x-min.jpg 2x">
+                            <img class="bottom__photos" src="/images/slider/slider-mob2-min.jpg" alt="фото">
+                        </picture>
+                    </li>
+                </ul>
+                <ul class="second-image__set">
+                    <li>
+                        <picture class="image-triple__set">
+                            <source media="(min-width: 320px)"
+                                srcset="/images/slider/slider-mob2-min.jpg 1x, /images/slider/slider-mob2@2x-min.jpg 2x">
+                            <img class="bottom__photos" src="/images/slider/slider-mob2-min.jpg" alt="фото">
+                        </picture>
+                    </li>
+                    <li>
+                        <picture class="image-triple__set">
+                            <source media="(min-width: 320px)"
+                                srcset="/images/slider/slider-mob2-min.jpg 1x, /images/slider/slider-mob2@2x-min.jpg 2x">
+                            <img class="bottom__photos" src="/images/slider/slider-mob2-min.jpg" alt="фото">
+                        </picture>
+                    </li>
+                    <li>
+                        <picture class="image-triple__set">
+                            <source media="(min-width: 320px)"
+                                srcset="/images/slider/slider-mob2-min.jpg 1x, /images/slider/slider-mob2@2x-min.jpg 2x">
+                            <img class="bottom__photos" src="/images/slider/slider-mob2-min.jpg" alt="фото">
+                        </picture>
+                    </li>
+                    <li>
+                        <picture class="image-triple__set">
+                            <source media="(min-width: 320px)"
+                                srcset="/images/slider/slider-mob2-min.jpg 1x, /images/slider/slider-mob2@2x-min.jpg 2x">
+                            <img class="bottom__photos" src="/images/slider/slider-mob2-min.jpg" alt="фото">
+                        </picture>
+                    </li>
+                </ul>
+                <button type="button" class="bottom-right__button">
+                    <svg width="40px" height="10px">
+                        <use href="/images/icons/icons-sprite.svg#icon-strelkavpravo"></use>
+                    </svg>
+                </button>
             </div>
         </div>
     </div>
