--- a/src/sass/components/_feedback.scss
+++ b/src/sass/components/_feedback.scss
@@ -9,6 +9,7 @@
 }
 
 .feedback__section-title {
+  margin-bottom: 40px;
   font-family: Montserrat, sans-serif;
   font-weight: 800;
   font-size: 20px;
@@ -27,6 +28,13 @@
   display: block;
 }
 
+.left__button,
+.right__button {
+  @media screen and (max-width: 767px) {
+    display: none;
+  }
+}
+
 .photo-and-icon__container {
   display: flex;
   flex-direction: column;
@@ -36,9 +44,61 @@
   }
 }
 
+.slide__container {
+  padding-top: 20px;
+  padding-bottom: 30px;
+  background: #ffffff;
+  box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.04);
+}
+
+.top-image__container {
+  margin-bottom: 26px;
+}
+.icon-vk {
+  margin-bottom: 26px;
+}
+
 .person__container {
   padding-left: 20px;
   padding-right: 20px;
+}
+
+.person__title {
+  margin-bottom: 10px;
+  font-family: Montserrat, sans-serif;
+  font-weight: 800;
+  font-size: 14px;
+  line-height: 1.214;
+  text-align: center;
+  letter-spacing: 0.08em;
+
+  color: #ff6b09;
+}
+
+.about-education__text {
+  margin-bottom: 10px;
+  font-family: Montserrat, sans-serif;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 15px;
+  text-align: center;
+  letter-spacing: 0.08em;
+
+  color: #b9b9b9;
+}
+
+.description__text {
+  font-family: Montserrat, sans-serif;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 20px;
+  text-align: center;
+  color: #3d3d3d;
+}
+
+.read-more__link {
+  color: #ff6b09;
+  text-decoration: underline;
 }
 
 @media screen and (min-wdth: 320px) {
@@ -47,5 +107,33 @@
     padding-right: 20px;
     padding-left: 20px;
     padding-bottom: 30px;
+  }
+}
+
+.small-icon__container {
+  display: flex;
+  margin-top: 20px;
+}
+.bottom-left__button,
+.bottom-right__button {
+  display: flex;
+  align-items: center;
+  padding: 0px;
+  border: none;
+  background-color: transparent;
+  @media screen and (min-width: 768px) {
+    display: none;
+  }
+}
+.first-image__set {
+  display: flex;
+  list-style: none;
+}
+.first-image__set-item + .first-image__set-item {
+  margin-left: 10px;
+}
+.second-image__set {
+  @media screen and (max-width: 767px) {
+    display: none;
   }
 }
