--- a/src/sass/components/_guarantee.scss
+++ b/src/sass/components/_guarantee.scss
@@ -21,8 +21,8 @@
   }
   @media screen and (min-width: 1344px) {
     max-width: 1344px;
-    padding-left: 15px;
-    padding-right: 15px;
+    padding-left: 123px;
+    padding-right: 112px;
   }
 }
 
@@ -59,6 +59,9 @@
   font-size: 12px;
   line-height: 1.666;
   color: #3d3d3d;
+  @media screen and (min-width: 1344px) {
+    font-size: 20px;
+  }
 }
 
 .left__border {
@@ -69,13 +72,14 @@
   display: flex;
   position: absolute;
   top: 0px;
-  left: -11.5px;
+  left: -7.5px;
   width: 15px;
   height: 30px;
   background: #f1f1f1;
   @media screen and (min-width: 1344px) {
     width: 22px;
     height: 40px;
+    left: -11px;
   }
 }
 
