--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,32 +1,49 @@
 <!-- FOOTER -->
 <footer class="footer">
-    <div class="container">
-<!-- Светлая тема -->
-<div class="light-theme">
-<!-- LOGO -->
-<a class="logo" href="index.html">
-  <div class="logo-secondfloor">
-  Hell
+  <div class="container">
+    <!-- Светлая тема -->
+    <div class="footer-light">
+      <!-- LOGO -->
+      <a class="logo" href="index.html">
+        <div class="logo-secondfloor">
+          Hell
           <svg class="logo-fire" width="13.93" height="19.38">
-          <use href="./images/sprite.svg#icon-fire"></use>
+            <use href="./images/sprite.svg#icon-fire"></use>
           </svg>
-  EN
+          EN
+        </div>
+        <div class="logo-firstfloor">
+          <span class="accent">адский </span>
+          <span>английский</span>
+        </div>
+      </a>
+
+      <!--Телефон  -->
+      <div class="footer-box">
+        <div class="footer-tel">
+          <svg class="footer-tel-icon" width="24" height="23">
+            <use href="./images/sprite.svg#icon-telephone"></use>
+          </svg>
+          <a class="footer-tel-number" href="tel:+380000000000"
+            >+38 (000) 000 00 00</a
+          >
+        </div>
+        <!-- Инстаграмм -->
+        <a class="footer-instagram" href="https://www.instagram.com/?hl=ru">
+          <img
+            src="./images/footer/instagram-png.png"
+            alt="instagram"
+            width="40"
+            height="40"
+          />
+        </a>
+      </div>
+    </div>
   </div>
-  <div class="logo-firstfloor">
-      <span class="accent">адский </span>
-      <span class="eng">английский</span>
+  <!-- Тёмная тема -->
+  <div class="footer-dark">
+    <div class="container">
+      <p class="footer-copyrights">@ Все права защищены, 2019</p>
+    </div>
   </div>
-</a>
-<!--Телефон  -->
-<a class="call-number" href="tel:+380000000000">+38 (000) 000 00 00</a>
-<!-- Инстаграмм -->
-<a class="insta-link" href="https://www.instagram.com/?hl=ru">
-<svg class="instagram" width="40" height="40">
-    <use href="./images/instagram.svg"></use>
-</svg></a>
-</div>
-<!-- Тёмная тема -->
-<div class="underfooter">
-<p class="copyrights">@ Все права защищены, 2019</p>
-</div>
 </footer>
