--- a/src/sass/base/_container.scss
+++ b/src/sass/base/_container.scss
@@ -4,7 +4,6 @@
   padding-right: 20px;
   padding-left: 20px;
 
-
   @include for-size(mobile-only) {
     max-width: 740px;
   }
@@ -14,8 +13,9 @@
   @include for-size(desktop) {
     width: 1090px;
 
-  margin-left: auto;
-  margin-right: auto;
+    margin-left: auto;
+    margin-right: auto;
+  }
 
   @media screen and (min-width: 768px) {
     width: 700px;
@@ -23,6 +23,5 @@
 
   @media screen and (min-width: 1200px) {
     width: 970px;
-
   }
 }
