--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -634,21 +634,21 @@ img {
 }
 
 .contacts-card {
-  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(5%, #ffffff), color-stop(5%, #fff5f675), to(#fff5f675));
-  background-image: linear-gradient(to bottom, #ffffff 5%, #fff5f675 5%, #fff5f675);
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(5%, #ffffff), color-stop(5%, #fff5f6), to(#fff5f6));
+  background-image: linear-gradient(to bottom, #ffffff 5%, #fff5f6 5%, #fff5f6);
 }
 
 @media screen and (min-width: 768px) {
   .contacts-card {
-    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(12%, #ffffff), color-stop(12%, #fff5f675), to(#fff5f675));
-    background-image: linear-gradient(to bottom, #ffffff 12%, #fff5f675 12%, #fff5f675);
+    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(12%, #ffffff), color-stop(12%, #fff5f6), to(#fff5f6));
+    background-image: linear-gradient(to bottom, #ffffff 12%, #fff5f6 12%, #fff5f6);
   }
 }
 
 @media screen and (min-width: 1200px) {
   .contacts-card {
-    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(12%, #ffffff), color-stop(12%, #fff5f675), to(#fff5f675));
-    background-image: linear-gradient(to bottom, #ffffff 12%, #fff5f675 12%, #fff5f675);
+    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(12%, #ffffff), color-stop(12%, #fff5f6), to(#fff5f6));
+    background-image: linear-gradient(to bottom, #ffffff 12%, #fff5f6 12%, #fff5f6);
     position: relative;
   }
 }
