--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -14,7 +14,6 @@ $colors: (
   'title': #d41443,
   'accent': #ffa5ba,
   'secondary-text': #907e82,
-  
 );
 
 @function getColor($key) {
@@ -29,5 +28,5 @@ $white: #ffffff;
 $gray-text: #907e82;
 $pink-text: #ffa5ba;
 $card-btm-one: #d41342;
-$card-bcg: #fff5f675;
+$card-bcg: #fff5f6;
 $hover-btn-two: #ecebeb;
