--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -662,10 +662,11 @@ img {
 @media screen and (min-width: 1200px) {
   .bcg-img-sale {
     position: absolute;
-    top: 0px;
+    top: 50px;
     left: 0;
     right: 0;
     max-width: 1600px;
+    pointer-events: none;
   }
 }
 
