--- a/src/sass/components/_sale.scss
+++ b/src/sass/components/_sale.scss
@@ -33,10 +33,11 @@
 
   @media screen and (min-width: 1200px) {
     position: absolute;
-    top: 0px;
+    top: 50px;
     left: 0;
     right: 0;
     max-width: 1600px;
+    pointer-events: none;
   }
 }
 .contacts-card-list {
