--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -34,7 +34,7 @@
       </ul>
       <!-- TABLET-HEADER-BTN-->
 
-      <button class="btn btn-tablet" type="button" class="btn">
+      <button class="btn header-btn" type="button">
         консультация по телефону
       </button>
       <!-- MENU-BUTTON -->
@@ -47,7 +47,7 @@
       >
         <svg class="menu-btn-icon" aria-label="Переключатель мобильного меню">
           <use class="icon-menu" href="./images/sprite.svg#icon-menu"></use>
-          <use class="icon-cross" href="/images/sprite.svg#icon-cross"></use>
+          <use class="icon-cross" href="./images/sprite.svg#icon-cross"></use>
         </svg>
       </button>
       <!-- BURGER-MENU  -->
