--- a/src/sass/base/_container.scss
+++ b/src/sass/base/_container.scss
@@ -1,4 +1,3 @@
-
 .container {
   width: 100%;
   padding: 0 20px;
@@ -16,8 +15,10 @@
   }
 }
 
-@media screen and (min-width: 1316px) {
+@media screen and (min-width: 1376px) {
   .container {
-    max-width: 1316px;
+    max-width: 1376px;
+    padding-left: 30px;
+    padding-right: 30px;
   }
 }
