--- a/src/sass/layout/_our-program.scss
+++ b/src/sass/layout/_our-program.scss
@@ -1,9 +1,3 @@
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-}
-
 .our-program {
   background-image: linear-gradient(
     to bottom,
@@ -14,23 +8,19 @@
   &__section-title {
     margin-bottom: 43px;
     color: rgb(255, 255, 255);
-    font-size: 20px;
-    font-weight: 800;
-    line-height: 26px;
+    @include fontOptions(800, 20px, 26px);
     letter-spacing: 0.03em;
     text-align: center;
 
     @media screen and (min-width: 768px) {
       margin-bottom: 52px;
-      font-size: 26px;
-      line-height: 33.8px;
+      @include fontOptions(800, 26px, 33.8px);
       text-align: left;
     }
 
-    @media screen and (min-width: 1314px) {
+    @media screen and (min-width: 1280px) {
       margin-bottom: 0;
-      font-size: 46px;
-      line-height: 59.8px;
+      @include fontOptions(800, 46px, 59.8px);
     }
   }
 
@@ -45,7 +35,7 @@
       margin-bottom: 189px;
     }
 
-    @media screen and (min-width: 1314px) {
+    @media screen and (min-width: 1280px) {
       display: flex;
       margin-left: 0px;
       margin-bottom: 164px;
@@ -68,7 +58,7 @@
         left: -56px;
       }
 
-      @media screen and (min-width: 1314px) {
+      @media screen and (min-width: 1280px) {
         width: 0;
         height: 0;
       }
@@ -85,10 +75,10 @@
       background-color: var(--accent-color);
 
       @media screen and (min-width: 768px) {
-        left: -62px;
+        left: -61.5px;
       }
 
-      @media screen and (min-width: 1314px) {
+      @media screen and (min-width: 1280px) {
         width: 16px;
         height: 16px;
         top: -68px;
@@ -103,13 +93,13 @@
         padding-bottom: 30px;
       }
 
-      @media screen and (min-width: 1314px) {
+      @media screen and (min-width: 1280px) {
         padding-bottom: 0;
         margin-right: 30px;
       }
     }
 
-    @media screen and (min-width: 1314px) {
+    @media screen and (min-width: 1280px) {
       flex-basis: calc((100% - 4 * 30px) / 5);
     }
   }
@@ -118,9 +108,7 @@
     position: relative;
     margin-bottom: 5px;
     color: rgb(255, 255, 255);
-    font-size: 14px;
-    font-weight: bold;
-    line-height: 28px;
+    @include fontOptions(700, 14px, 28px);
     letter-spacing: 0.08em;
     text-transform: uppercase;
 
@@ -129,7 +117,7 @@
       content: counters(our-program, '.') ' ';
     }
 
-    @media screen and (min-width: 1314px) {
+    @media screen and (min-width: 1280px) {
       margin-bottom: 25px;
       font-size: 30px;
       text-transform: lowercase;
@@ -137,7 +125,7 @@
   }
 
   &__sublist {
-    @media screen and (min-width: 768px) and (max-width: 1313px) {
+    @media screen and (min-width: 768px) and (max-width: 1279px) {
       display: flex;
     }
   }
@@ -149,7 +137,7 @@
       }
     }
 
-    @media screen and (min-width: 768px) and (max-width: 1313px) {
+    @media screen and (min-width: 768px) and (max-width: 1279px) {
       margin-right: 50px;
 
       &:nth-child(1) {
@@ -161,7 +149,7 @@
       }
     }
 
-    @media screen and (min-width: 1314px) {
+    @media screen and (min-width: 1280px) {
       &:not(:last-child) {
         margin-bottom: 25px;
       }
@@ -173,8 +161,7 @@
     margin-bottom: 5px;
     margin-left: 18px;
     color: var(--accent-color);
-    font-size: 12px;
-    font-weight: bold;
+    @include fontOptions(700, 12px, 32px);
     line-height: 32px;
     text-transform: initial;
 
@@ -191,18 +178,18 @@
       height: 1px;
       background-color: var(--accent-color);
 
-      @media screen and (min-width: 1314px) {
+      @media screen and (min-width: 1280px) {
         left: -30px;
         width: 20px;
         height: 2px;
       }
 
-      @media screen and (min-width: 1314px) {
+      @media screen and (min-width: 1280px) {
         left: -28px;
       }
     }
 
-    @media screen and (min-width: 1314px) {
+    @media screen and (min-width: 1280px) {
       margin-bottom: 10px;
       margin-left: 28px;
       font-size: 20px;
@@ -211,15 +198,12 @@
 
   &__subitem-subtitle {
     color: rgba(185, 185, 185, 0.5);
-    font-size: 12px;
-    font-weight: 500;
-    line-height: 20px;
+    @include fontOptions(500, 12px, 20px);
     letter-spacing: 0.08em;
     text-transform: initial;
 
-    @media screen and (min-width: 1314px) {
-      font-size: 18px;
-      line-height: 28px;
+    @media screen and (min-width: 1280px) {
+      @include fontOptions(500, 18px, 28px);
     }
   }
 
@@ -232,7 +216,7 @@
       bottom: 528px;
     }
 
-    @media screen and (min-width: 1314px) {
+    @media screen and (min-width: 1280px) {
       bottom: 234px;
       left: 0;
     }
@@ -244,18 +228,15 @@
     width: 180px;
     margin-bottom: 30px;
     color: rgb(255, 255, 255);
-    font-size: 20px;
-    font-weight: 800;
-    line-height: 27.2px;
+    @include fontOptions(800, 20px, 27.2px);
 
     @media screen and (min-width: 768px) {
       width: 100%;
-      font-size: 26px;
-      line-height: 33.8px;
+      @include fontOptions(800, 26px, 33.8px);
       text-align: center;
     }
 
-    @media screen and (min-width: 1314px) {
+    @media screen and (min-width: 1280px) {
       display: none;
     }
   }
@@ -267,7 +248,6 @@
     box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.04);
     letter-spacing: 0.08em;
     counter-reset: choice;
-    z-index: 1;
 
     @media screen and (min-width: 768px) {
       padding: 35px 118px 25px 98px;
@@ -275,7 +255,7 @@
       flex-wrap: wrap;
     }
 
-    @media screen and (min-width: 1314px) {
+    @media screen and (min-width: 1280px) {
       padding: 70px 83px;
     }
   }
@@ -283,9 +263,7 @@
   &__item {
     position: relative;
     color: var(--accent-color);
-    font-size: 14px;
-    font-weight: bold;
-    line-height: 23.1px;
+    @include fontOptions(700, 14px, 23.1px);
 
     &::before {
       position: static;
@@ -308,7 +286,7 @@
       top: -10px;
       left: 23px;
 
-      @media screen and (min-width: 1314px) {
+      @media screen and (min-width: 1280px) {
         top: -15px;
       }
     }
@@ -320,12 +298,12 @@
         margin-bottom: 30px;
       }
 
-      @media screen and (min-width: 1314px) {
+      @media screen and (min-width: 1280px) {
         margin-bottom: 50px;
       }
     }
 
-    @media screen and (min-width: 768px) and (max-width: 1314px) {
+    @media screen and (min-width: 768px) and (max-width: 1280px) {
       flex-basis: calc((100% - 1 * 20px) / 2);
 
       &:nth-child(2n + 1) {
@@ -336,7 +314,7 @@
       }
     }
 
-    @media screen and (min-width: 1314px) {
+    @media screen and (min-width: 1280px) {
       flex-basis: calc((100% - 2 * 40px) / 3);
       margin-bottom: 50px;
       margin-right: 40px;
@@ -354,18 +332,15 @@
 
   &__descr {
     color: rgb(17, 21, 24);
-    font-size: 14px;
-    font-weight: bold;
-    line-height: 20px;
+    @include fontOptions(700, 14px, 20px);
 
-    @media screen and (min-width: 1314px) {
-      font-size: 20px;
-      line-height: 24px;
+    @media screen and (min-width: 1280px) {
+      @include fontOptions(700, 20px, 24px);
     }
   }
 }
 
-@media screen and (min-width: 1314px) {
+@media screen and (min-width: 1280px) {
   .divider {
     width: 100%;
     border-bottom: 1px solid #ffffff;
