--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -33,7 +33,12 @@
         </svg>
       </button>
 
-      <button class="navigation-btn" type="button">Buy now</button>
+      <button class="navigation-btn" type="button">
+        Buy now
+        <svg class="navigation-btn-icon" width="5" height="8">
+          <use href="./images/icons/symbol-defs.svg#chevron-right"></use>
+        </svg>
+      </button>
     </div>
 
     <div class="mobile-menu mobile-container" data-menu>
