добавила картинку только для мобильного

--- a/src/sass/layouts/_manufacture.scss
+++ b/src/sass/layouts/_manufacture.scss
@@ -85,7 +85,7 @@
   margin-bottom: 38px;
 }
 // .item-milk::before {
-//   background-image: url('./src/images/icons/milk.svg');
+//   background-image: url('./images/icons/milk.png');
 // }
 // .item-apple::before {
 //   background-image: url('./src/images/icons/apple.svg');
