Добавил стили на шапку сайта

--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -3,28 +3,64 @@
   top: 0;
   left: 50%;
   transform: translate(-50%, 0);
+
+  padding-top: 6px;
+
+  @media screen and (min-width: 768px) {
+    padding-top: 37px;
+  }
 }
 
 .page-header-inner {
   display: flex;
   justify-content: space-between;
   align-items: center;
+
+  @media screen and (min-width: 768px) {
+    justify-content: flex-start;
+    align-items: center;
+  }
 }
 
 .logo {
   display: inline-block;
-  padding-top: 6px;
 }
 
 .navigation-btn {
   @media screen and (max-width: 767px) {
     display: none;
   }
+
+  position: relative;
+  width: 160px;
+  height: 44px;
+  padding: 0;
+  margin: 0;
+  border: 1px solid transparent;
+  border-radius: 22px;
+  background-color: $primaryWhiteColor;
+
+  font-family: 'DM Sans', sans-serif;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 1.3125;
+  text-align: center;
+  color: $titleTextColor;
+}
+
+.navigation-btn-icon {
+  fill: $titleTextColor;
+  margin-left: 12px;
 }
 
 .menu-open-btn {
   @media screen and (min-width: 1200px) {
     display: none;
+  }
+
+  @media screen and (min-width: 768px) {
+    margin-right: 30px;
+    margin-left: auto;
   }
 
   display: inline-block;
