--- a/src/partials/locations.html
+++ b/src/partials/locations.html
@@ -1,6 +1,6 @@
 <section class="locations">
     <!-- <div class="locations-white-block"></div> -->
-    <div class="container-locations">
+    <div class="container">
         <ul class="locations-list">
             <li class="locations-item">
                 <p class="locations-item-cafe">CAFE</p>
