--- a/src/sass/_locations.scss
+++ b/src/sass/_locations.scss
@@ -1,11 +1,10 @@
- 
-    
+
 .locations {
     display: block;
-    // position: relative;
+    
     background-color: $color-footer;
-    // position: absolute;
-    height: 1375px; //-88 на моб вверх//
+  
+    height: 1375px;
        @media screen and (min-width: 768px){
         display: flex;
         flex-wrap: wrap;
@@ -16,7 +15,7 @@
          background-repeat: no-repeat; 
         }
 }
-    .container-locations {
+    .container{
         position: absolute;
             padding-left: 20px;
             padding-right: 20px;
