--- a/src/sass/base/_container.scss
+++ b/src/sass/base/_container.scss
@@ -7,16 +7,26 @@
     flex-direction: column;
     align-items: center;
   }
+}
 
-  //   @media screen and (min-width: 480px) {
+@media screen and (min-width: 480px) {
+  .container {
+    max-width: 480px;
+    padding: 0 34px;
+    margin: 0 auto;
+  }
+}
 
-  //   }
+@media screen and (min-width: 768px) {
+  .container {
+    max-width: 768px;
+    // padding: 0 ??px;
+  }
+}
 
-  //   @media screen and (min-width: 768px) {
-
-  //   }
-
-  //   @media screen and (min-width: 1200px) {
-
-  //   }
+@media screen and (min-width: 1200px) {
+  .container {
+    max-width: 1200px;
+    // padding: 0 ??px;
+  }
 }
