--- a/src/sass/base/_container.scss
+++ b/src/sass/base/_container.scss
@@ -14,8 +14,9 @@
         padding: 0 40px;
     }
 }
-@media screen and (min-width:1316px){
+@media screen and (min-width:1376px){
     .container{
-        max-width: 1316px;
+        max-width: 1376px;
+        padding: 0 30px;
     }
 }
