--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -15,10 +15,10 @@
             <picture>
                 <source
                     srcset="Images/Hero/Webp/hero_desk.webp 1x, Images/Hero/Webp/hero_desk2x.webp 2x"
-                    media="(min-width:1316px)" type="image/webp">
+                    media="(min-width:1376px)" type="image/webp">
                 <source
-                    srcset="Images/Hero/Jpg/hero_desk.jpg 1x, Images/Hero/Jpg/hero_desk2x.jpg 2x"
-                    media="(min-width:1316px)">
+                    srcset="Images/Hero/Png/hero_desk.png 1x, Images/Hero/Png/hero_desk2x.png 2x"
+                    media="(min-width:1376px)">
                 <source
                     srcset="Images/Hero/Webp/hero_tab.webp 1x, Images/Hero/Webp/hero_tab2x.webp 2x"
                     media="(min-width:768px)" type="image/webp">
