--- a/src/sass/_registration.scss
+++ b/src/sass/_registration.scss
@@ -141,6 +141,8 @@
     .registration-form-input {
     width: 390px;
     }
+    .registration-button {
+      margin-top: 11px;}
 }
 
     @media screen and (min-device-pixel-ratio: 2) and (min-width: 768px),
