--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -77,7 +77,7 @@
 
 .footer {
   &-white {
-    height: 199px;
+    min-height: 199px;
     justify-content: center;
     align-items: center;
     display: flex;
@@ -120,6 +120,7 @@
     align-items: center;
     display: flex;
     flex-direction: column;
+    margin-bottom: 30px;
   }
 }
 .logo {
@@ -165,7 +166,7 @@
       left: -28px;
     }
     &-white {
-      height: 125px;
+      min-height: 125px;
       & .container {
         align-items: center;
         display: flex;
@@ -183,8 +184,10 @@
     width: 24px;
     height: 23px;
     justify-content: center;
+
     &-groupe {
       flex-direction: row;
+      margin-bottom: 0;
     }
     &-number {
       @include font(600, 20px, 1.2, 0.08em);
