--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,5 +1,5 @@
 <section class="products">
-    <div class="products-container">
+    <div class="container">
         <h4 class="products-secondary-title">100% natural</h4>
         <h2 class="products-title">products</h2>
         <ul class="product-cards list">
