--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -13,6 +13,7 @@
 @import './layout/programm';
 @import './layout/why-us';
 @import './layout/registration';
+@import './layout/footer';
 
 // utils
 @import './utils/container';
